tests/out/error/mutability/selector.in.bt
struct ArrHolder {
	ai []bool
	mut am []bool
}

ah := ArrHolder{}

for mut a in ah.ai {} // err
for mut a in ah.am {} // err
