tests/out/error/mutability/selector.out
tests/out/error/mutability/selector.in.bt:8:14 error: `ah` is immutable
tests/out/error/mutability/selector.in.bt:8:16 error: field `ArrHolder.ai` is immutable
tests/out/error/mutability/selector.in.bt:9:14 error: `ah` is immutable
